cleanup en formatting for ipad

--- a/EqUiWebUi/Areas/Alert/Views/Alert/_settings.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_settings.cshtml
@@ -5,14 +5,14 @@
     </div>
     <div class="panel-body">
         <p><a href="~/Alert/c_triggers/index" class="btn btn-danger btn-sm">c_trigger &raquo;</a>Manage alert triggers</p>
-        <p><a href="~/Alert/h_alert/index" class="btn btn-danger btn-sm">h_alert &raquo;</a>Manager alerts</p>
+        <p><a href="~/Alert/h_alert/index" class="btn btn-danger btn-sm">h_alert &raquo;</a>Manage alerts (all alerts no filters) including admin edit</p>
         <hr />
-        <p><a href="~/Alert/Alert/configureHangfire" class="btn btn-warning btn-sm JQresultTriggerBtn">configureHangfire &raquo;</a>configureHangfire</p>
+        <p><a href="~/Alert/Alert/configureHangfire" class="btn btn-warning btn-sm JQresultTriggerBtn">configureHangfire &raquo;</a>Write alert config to hangfire</p>
         <hr />
-        <p><a href="~/Alert/Alert/Index" class="btn btn-primary btn-sm">Main user index &raquo;</a>Index</p>
+        <p><a href="~/Alert/Alert/Index" class="btn btn-primary btn-sm">Main user index &raquo;</a>Index for filterd alert profiles(users)</p>
         <hr />
-        <p><a href="~/Alert/c_SMSsystem/index" class="btn btn-warning btn-sm">c_SMSsystem &raquo;</a></p>
-        <p><a href="~/Alert/c_SMSconfig/index" class="btn btn-warning btn-sm">c_SMS_config &raquo;</a></p>
-        <p><a href="~/Alert/c_CPT600/index" class="btn btn-warning btn-sm">c_CPT600 &raquo;</a></p>
+        <p><a href="~/Alert/c_SMSsystem/index" class="btn btn-warning btn-sm">c_SMSsystem &raquo;</a>List of sms "Systems" these dummy systems connect to an alert trigger</p>
+        <p><a href="~/Alert/c_SMSconfig/index" class="btn btn-warning btn-sm">c_SMS_config &raquo;</a>Join between SMSsystem and CPT600 (each system can send to one or more CPT600 profiles)</p>
+        <p><a href="~/Alert/c_CPT600/index" class="btn btn-warning btn-sm">c_CPT600 &raquo;</a>List of CPT600 profiles (with location asset root and sms counters)</p>
     </div>
 </div>
