--- a/EqUiWebUi/Areas/Alert/Views/c_SMSconfig/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_SMSconfig/Index.cshtml
@@ -5,7 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index c_SMSconfig</h2>
+<div class="container">
+    <h2>Index of c_SMSconfig</h2>
+    <div class="alert alert-info">
+        <h4>
+            <strong>This tabels joins SMSsystem with CPT600</strong>
+        </h4>
+
+        <div class="text-muted">
+
+        </div>
+    </div>
+</div>
 
 <p>
     @Html.ActionLink("Create New", "Create")
