--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
@@ -34,11 +34,11 @@
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.name).Titled("name");
-    columns.Add(c => c.cVariableMask).Titled("cVariableMask");
-    columns.Add(c => c.cVariableSearchMask).Titled("cVariableSearchMask");
-    columns.Add(c => c.cErrorMask).Titled("cErrorMask");
-    columns.Add(c => c.cCSVLogMask).Titled("cCSVLogMask");
-    columns.Add(c => c.cDeviceInfoMask).Titled("cDeviceInfoMask");
+    columns.Add(c => c.cVariableMask).Titled("cVariableMask").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.cVariableSearchMask).Titled("cVariableSearchMask").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.cErrorMask).Titled("cErrorMask").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.cCSVLogMask).Titled("cCSVLogMask").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.cDeviceInfoMask).Titled("cDeviceInfoMask").Css("hidden-sm hidden-xs");
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
@@ -47,9 +47,10 @@
     columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => @Html.ActionLink("ShowEvents", "GetEventData", new {controller_id = ViewBag.controller_id })
+                .RenderedAs(c => @Html.ActionLink("Controller_events", "GetEventData", new { controller_id = ViewBag.controller_id })
                 ).Filterable(false);
 }).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+
 
 <hr />
 
