--- a/EqUiWebUi/Areas/VASC/Views/c_variable/GetVariableData.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable/GetVariableData.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.rt_value>
 @{
-    ViewBag.Title = "GetDeviceInfoData";
+    ViewBag.Title = "GetVariableData";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
