--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -30,8 +30,8 @@
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="panel-body">
-        <p><a href="http://gensvw1051:5601/app/kibana#/discover?_g=()" class="btn btn-danger btn-sm">Kibana (VIDS) &raquo;</a></p>
-        <p><a href="http://andonscreendumps.gen.volvocars.net/" class="btn btn-danger btn-sm">Screendumps (ANDON) &raquo;</a></p>
+        <p><a href="http://gensvw1051:5601/app/kibana#/discover?_g=()" class="btn btn-danger btn-sm">Kibana (VIDS) &raquo;</a>Elastic search tool to search the VIDS database</p>
+        <p><a href="http://andonscreendumps.gen.volvocars.net/" class="btn btn-danger btn-sm">Screendumps (ANDON) &raquo;</a>All andon screen dumps (non x20)</p>
         <p><a href="~/vasc/vasc/index" class="btn btn-danger btn-sm">VASC &raquo;</a>Manage VASC</p>
     </div>
 </div>
