--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -9,14 +9,14 @@
 
 @Html.Grid(Model).Named("h_alert").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Desc);
+    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Desc).Css("hidden-sm hidden-xs");
     columns.Add(c => c.c_triggers.alertType).Titled("alertType");
-    columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}");
+    columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}").Css("hidden-sm hidden-xs");
     columns.Add(c => c.location).Titled("location");
-    columns.Add(c => c.alarmobject).Titled("alarmobject");
+    columns.Add(c => c.alarmobject).Titled("alarmobject").Css("hidden-sm hidden-xs");
     columns.Add(c => c.info).Titled("info");
-    columns.Add(c => c.ChangedUser.username.Replace(@"VCCNET\", "")).Titled("ChangedUser").Filterable(true);
-    columns.Add(c => c.triggerCount).Titled("TC").Filterable(true);
+    columns.Add(c => c.ChangedUser.username.Replace(@"VCCNET\", "")).Titled("ChangedUser").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.triggerCount).Titled("TC").Css("hidden-sm hidden-xs");
     columns.Add(c => c.c_state.state).Titled("state");
 
     //add edit button
@@ -28,7 +28,7 @@
 
 }).Filterable(true).Sortable(true).Pageable(pager =>
 {
-    pager.RowsPerPage = 15;
+    pager.RowsPerPage = 7;
 }).Empty("Did not find anything").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleStatus(row.c_state.state))
 
 <p></p>
