--- a/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
@@ -5,7 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container">
+    <h2>Index of c_CPT600</h2>
+    <div class="alert alert-info">
+        <h4>
+            <strong>Records configured here must also be defined in CPT600</strong>
+        </h4>
+
+        <div class="text-muted">
+            if an alert is matched with the locationtree and Assetroot of the CPT600 profile the sms will be send.
+        </div>
+    </div>
+</div>
 
 <p>
     @Html.ActionLink("Create New", "Create")
