--- a/EqUiWebUi/Areas/Alert/Views/c_smsSystem/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_smsSystem/Index.cshtml
@@ -5,7 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="container">
+    <h2>Index of c_smsSystem</h2>
+    <div class="alert alert-info">
+        <h4>
+            <strong>Records configured here can be joined to an alert trigger</strong>
+        </h4>
+
+        <div class="text-muted">
+            this does not direcly join to a phone. The link between smsSystem and a CPT600 is made in c_Smsconfig
+        </div>
+    </div>
+</div>
 
 <p>
     @Html.ActionLink("Create New", "Create")
