--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
@@ -14,12 +14,12 @@
 
 @Html.Grid(Model).Named("c_triggers").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Asc).Css("hidden-sm hidden-xs");
     columns.Add(c => c.enabled).Titled("enabled");
     columns.Add(c => c.discription).Titled("discription");
     columns.Add(c => c.enableSMS).Titled("enableSMS");
     columns.Add(c => c.c_smsSystem.system).Titled("SMSsystem");
-    columns.Add(c => c.smsOnRetrigger).Titled("smsOnRetrigger");
+    columns.Add(c => c.smsOnRetrigger).Titled("smsOnRetrigger").Css("hidden-sm hidden-xs");
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
