--- a/EqUiWebUi/Areas/VASC/Views/L_operation/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/L_operation/_List.cshtml
@@ -1,17 +1,18 @@
 ﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.L_operation>
 
     @Html.Grid(Model).Named("L_operationGrid").Build(columns =>
-    {
-        columns.Add(c => c.ID).Titled("id").InitialSort(GridSortOrder.Desc);
-        columns.Add(c => c.C_timestamp).Titled("_timestamp");
-        columns.Add(c => c.code).Titled("code");
-        columns.Add(c => c._L_operationCode).Titled("Operation");
-        columns.Add(c => c.Vasc_name).Titled("Vasc_name");
-        columns.Add(c => c.controller_id).Titled("controller_id");
-        columns.Add(c => c.Description).Titled("Desciption");
-    }).Filterable(true).Sortable(true).Pageable(pager =>
-    {
-        pager.RowsPerPage = 20;
-    }).Empty("Did not find anything").Css("table-hover")
+{
+    columns.Add(c => c.ID).Titled("id").InitialSort(GridSortOrder.Desc).Css("hidden-sm hidden-xs");
+    columns.Add(c => c.C_timestamp).Titled("_timestamp");
+    columns.Add(c => c.code).Titled("code");
+    columns.Add(c => c._L_operationCode).Titled("Operation").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Vasc_name).Titled("Vasc_name").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.controller_id).Titled("controller_id").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.c_controller.controller_name).Titled("controller_name");
+    columns.Add(c => c.Description).Titled("Desciption");
+}).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    pager.RowsPerPage = 15;
+}).Empty("Did not find anything").Css("table-hover")
 
 <div class="badge">Count: @Model.Count()</div>
