--- a/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
@@ -5,8 +5,8 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.controller_name).Titled("controller_name");
-    columns.Add(c => c.systemId).Titled("systemId");
-    columns.Add(c => c.ip).Titled("ip");
+    columns.Add(c => c.systemId).Titled("systemId").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.ip).Titled("ip").Css("hidden-sm hidden-xs");
     columns.Add(c => c._ControllerFlags).Titled("flags");
     columns.Add(c => c)
                     .Titled("")
