--- a/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
@@ -1,21 +1,21 @@
 ﻿@model List<EqUiWebUi.Areas.VASC.Models.c_error>
 
 @Html.Grid(Model).Named("c_errorGrid").Build(columns =>
-    {
-        columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
-        columns.Add(c => c.enable_bit).Titled("enable_bit");
-        columns.Add(c => c.flags).Titled("flags");
-        columns.Add(c => c._ErrorCategory).Titled("ErrorCategory");
-        columns.Add(c => c.error_number).Titled("error_number");
-        columns.Add(c => c._Operator).Titled("Operator");
-        columns.Add(c => c.Ignore).Titled("Logtext");
-        columns.Add(c => c.UserComment).Titled("UserComment");
-        columns.Add(c => c)
-                        .Titled("")
-                        .Encoded(false)
-                        .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
-                        ).Filterable(false);
-    }).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c._Enable_bit).Titled("enable_bit");
+    columns.Add(c => c.flags).Titled("flags").Css("hidden-sm hidden-xs");
+    columns.Add(c => c._ErrorCategory).Titled("ErrorCategory").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.error_number).Titled("error_number");
+    columns.Add(c => c._Operator).Titled("Operator");
+    columns.Add(c => c.Ignore).Titled("Logtext");
+    columns.Add(c => c.UserComment).Titled("UserComment").Css("hidden-sm hidden-xs");
+    columns.Add(c => c)
+                    .Titled("")
+                    .Encoded(false)
+                    .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id })
+                    ).Filterable(false);
+}).Filterable(true).Sortable(true).Pageable(pager =>
 {
     pager.RowsPerPage = 10;
 }).Empty("Did not find anything").Css("table-hover")
