--- a/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
@@ -5,11 +5,11 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.variable).Titled("variable");
-    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate");
-    columns.Add(c => c._Insert_update).Titled("_Insert_update");
+    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate").Css("hidden-sm hidden-xs");
+    columns.Add(c => c._Insert_update).Titled("_Insert_update").Css("hidden-sm hidden-xs");
     columns.Add(c => c.rt_table).Titled("rt_table");
-    columns.Add(c => c._SymbolTypes).Titled("_SymbolTypes"); //must check doc to make this enum
-    columns.Add(c => c.datatype).Titled("datatype"); //idem
+    columns.Add(c => c._SymbolTypes).Titled("_SymbolTypes").Css("hidden-sm hidden-xs"); //must check doc to make this enum
+    columns.Add(c => c.datatype).Titled("datatype").Css("hidden-sm hidden-xs"); //idem
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
@@ -18,7 +18,7 @@
     columns.Add(c => c)
             .Titled("")
             .Encoded(false)
-            .RenderedAs(c => @Html.ActionLink("Show", "GetVariableData", new { c_variable_id = c.id, controller_id = ViewBag.controller_id })
+            .RenderedAs(c => @Html.ActionLink("Show", "GetVariableData", new { c_variable_search_id = c.id, controller_id = ViewBag.controller_id })
             ).Filterable(false);
 }).Filterable(true).Sortable(true).Pageable(pager =>
 {
