--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/Index.cshtml
@@ -14,12 +14,12 @@
 
 @Html.Grid(Model).Named("Screens").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Asc);
-    columns.Add(c => c.Screen_num).Titled("scrNum");
-    columns.Add(c => c.L_users.username).Titled("Render as");
+    columns.Add(c => c.id).Titled("ID").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Screen_num).Titled("scrNum").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.L_users.username).Titled("Render as").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.Discription).Titled("Discription");
     columns.Add(c => c.ScreenUrl).Titled("ScreenUrl").Css("hidden");
-    columns.Add(c => c.ResetRate).Titled("ResetRate");
+    columns.Add(c => c.ResetRate).Titled("ResetRate").Css("hidden-sm hidden-xs");
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
@@ -28,4 +28,7 @@
                                  @Html.ActionLink("Delete", "Delete", new { id = c.id }) + "  | " +
                                  @Html.ActionLink("Show", "RenderUserScreen", new { screenID = c.id })
                 ).InitialSort(GridSortOrder.Asc).Filterable(false);
-}).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
+}).Filterable(true).Sortable(true).Pageable(pager =>
+{
+    pager.RowsPerPage = 15;
+}).Empty("Did not find anything").Css("table-hover")
