--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/_settings.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/_settings.cshtml
@@ -6,6 +6,6 @@
     <div class="panel-body">
         <p><a href="~/user_management/UserScreens/Index" class="btn btn-primary btn-sm">Screens &raquo;</a>Beheer van schermen. (sommige gebruikers zoals de digiborden hebben voorgedefineerde schermen)</p>
         <p><a href="~/user_management/UserScreens/Screenmaster" class="btn btn-danger btn-sm">ScreenMaster &raquo;</a>Commandos sturen naar schermen</p>
-        file:////gnlsnm0101.gen.volvocars.net/proj/6308-SHR-VCC22700/LegancyTools/DEPLOYMENTBASE/EqUiDigibordLauncher Config tool om kiosk op te starten.
+        <p><a href="file:////gnlsnm0101.gen.volvocars.net/proj/6308-SHR-VCC22700/LegancyTools/DEPLOYMENTBASE/EqUiDigibordLauncher" class="btn btn-danger btn-sm">DigiLauncher &raquo;</a>config tool om kiosk op te starten.</p>
     </div>
 </div>
