--- a/EqUiWebUi/Areas/user_management/Views/user/Edit.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/user/Edit.cshtml
@@ -28,6 +28,9 @@
             @*Can be changed if user not locked*@
             @Html.LabelFor(model => model.LocationRoot, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                <p>
+                    @MyFilters.LocationDropdownGlobal("LocationRootPreselect")
+                </p>
                 @Html.EditorFor(model => model.LocationRoot, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LocationRoot, "", new { @class = "text-danger" })
             </div>
@@ -37,6 +40,9 @@
             @*Can be changed if user not locked*@
             @Html.LabelFor(model => model.AssetRoot, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                <p>
+                    @MyFilters.AssetDropdownGlobal("AssetRootPreselect")
+                </p>
                 @Html.EditorFor(model => model.AssetRoot, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AssetRoot, "", new { @class = "text-danger" })
             </div>
@@ -71,3 +77,14 @@
         </div>
     </div>
 }
+
+
+    <script>
+    $('#LocationRootPreselect').on('change', function () {
+            $('#LocationRoot')[0].value = this.value;
+    });
+
+    $('#AssetRootPreselect').on('change', function () {
+        $('#AssetRoot')[0].value = this.value;
+    });
+    </script>
