--- a/EqUiWebUi/Areas/user_management/Views/users/Edit.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/Edit.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>users</h4>
         <hr />
@@ -27,6 +27,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LocationRoot, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                <p>
+                    @MyFilters.LocationDropdownGlobal("LocationRootPreselect")
+                </p>
                 @Html.EditorFor(model => model.LocationRoot, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LocationRoot, "", new { @class = "text-danger" })
             </div>
@@ -35,6 +38,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AssetRoot, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                <p>
+                    @MyFilters.AssetDropdownGlobal("AssetRootPreselect")
+                </p>
                 @Html.EditorFor(model => model.AssetRoot, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AssetRoot, "", new { @class = "text-danger" })
             </div>
@@ -71,3 +77,13 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+<script>
+    $('#LocationRootPreselect').on('change', function () {
+            $('#LocationRoot')[0].value = this.value;
+    });
+
+    $('#AssetRootPreselect').on('change', function () {
+        $('#AssetRoot')[0].value = this.value;
+    });
+</script>
