vasc breakdown details view
fixxed table to view in entityframework

--- a/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Shared/_Moreinfo.cshtml
@@ -33,3 +33,11 @@
     @Html.Action("_workordersOnLocation", "Workorder", new { area = "Maximo_ui", location = Model.location })
 
 </div>
+
+<div class="modal-footer">
+    @if (Model.logtype == "BREAKDOWN")
+    {
+
+    }
+    @Html.ActionLink("JobDetails", "rjJob", "Brekadown", new { area = "VASC", jobID = Model.refid })
+</div>
