--- a/EqUiWebUi/Areas/VASC/Views/c_error/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_error/Index.cshtml
@@ -17,8 +17,13 @@
         <p>*Insert into rt_alarm (junk table)</p>
         <p>*Allow this type to be used in breakdown calculation.</p>
 
+        <strong>Know that</strong>
+        <p>*setting an error_number to 0 the complete errorCategory will be matched</p>
+        <p>*for mach on error_numnber only set  operator to OR and leave Logtext empty</p>
+
+
         <div class="text-muted">
-             If an alarm is NOT machted here it will be treated with a standard flagcode of 5. (insert into h_alarm and allowed to be used in breakdown)
+            If an alarm is NOT machted here it will be treated with a standard flagcode of 5. (insert into h_alarm and allowed to be used in breakdown)
         </div>
     </div>
 </div>
