--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -55,14 +55,11 @@
                 Boommap met aantal storingen
             </p>
 
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=DressByFault" class="btn btn-primary btn-sm">Dress Fouten &raquo;</a>
-                Boommap met dressproblemen per fout type 
-            </p>
-
         </div>
     </div>
-    <p></p>
+
+    <hr />
+
     <div class="panel panel-primary">
         <div class="panel-heading">
             <h4 class="panel-title">Test area</h4>
@@ -78,6 +75,32 @@
 </div>
 
 <hr />
+
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h4 class="panel-title">Tipdress NGAC</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="panel-body">
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=Weardress" class="btn btn-primary btn-sm">Wear/dress &raquo;</a>
+        </p>
+
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=WeardressTrend" class="btn btn-primary btn-sm">Wear/dressTrend &raquo;</a>
+        </p>
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=TipDressStuff&sheet=DressFaults" class="btn btn-primary btn-sm">Wear/dress &raquo;</a>
+            Boommap met dressproblemen per fout type
+        </p>
+    </div>
+</div>
+
+<hr />
+
 
 <div>
     <h4>4K Digiborden (max ultra HD)</h4>
