--- a/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
@@ -5,6 +5,8 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.flags).Titled("flags").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.ordinal).Titled("ordinal").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.error_category).Titled("catId").Css("hidden-sm hidden-xs");
     columns.Add(c => c._ErrorCategory).Titled("ErrorCategory").Css("hidden-sm hidden-xs");
     columns.Add(c => c.error_number).Titled("error_number");
     columns.Add(c => c._Operator).Titled("Operator");
