--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -69,11 +69,11 @@
         </p>
 
         @{
-            string urlGreenfieldsuperVis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/");
-            <p>
-                <a href="~/Home/Rendersite?url=@urlGreenfieldsuperVis" class="btn btn-primary btn-sm">Tia supervisie index &raquo;</a>
-                Elk beschikbaar scherm van CMA supervisie.
-            </p>
+        string urlGreenfieldsuperVis = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieCma/");
+        <p>
+            <a href="~/Home/Rendersite?url=@urlGreenfieldsuperVis" class="btn btn-primary btn-sm">Tia supervisie index &raquo;</a>
+            Elk beschikbaar scherm van CMA supervisie.
+        </p>
         }
     </div>
 </div>
@@ -151,13 +151,8 @@
     </div>
     <div class="panel-body">
         <p>
-            <a href="~/Dynamic/DynamicWebgrid" class="btn btn-primary btn-sm">Dynamic &raquo;</a>
+            <a href="~/VASC/Breakdown/getBreakdowns" class="btn btn-primary btn-sm">NGAC breakdown&raquo;</a>(test)
             Test met niet gebufferde query
         </p>
-        <p>
-            <a href="~/Spc/index" class="btn btn-primary btn-sm">SPC &raquo;</a>
-            Spc index
-        </p>
-
     </div>
 </div>
