--- a/EqUiWebUi/Areas/VASC/Views/Breakdown/_BreakDownGridLayout.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/Breakdown/_BreakDownGridLayout.cshtml
@@ -2,7 +2,7 @@
 
 @model IGrid<EqUiWebUi.Areas.VASC.Models.rt_job_breakdown>
 
-<div@(Html.Raw(Model.Name != null ? " id=\"" + Model.Name + "\"" : "")) class="mvc-grid">
+<div @(Html.Raw(Model.Name != null ? " id=\"" + Model.Name + "\"" : "")) class="mvc-grid">
     <table class="table @Model.CssClasses" @Model.Attributes>
         <thead>
             <tr>
@@ -46,55 +46,71 @@
             </tr>
         </thead>
         <tbody>
-              @if (Model.Rows.Any())
-              {
-        @*custom row builder with partial*@
-                    foreach (IGridRow<EqUiWebUi.Areas.VASC.Models.rt_job_breakdown> row in Model.Rows)
-                    {
-                            <tr class="@row.CssClasses">
-                                @foreach (IGridColumn column in Model.Columns)
-                                  {
-                                     <td class="@column.CssClasses">@column.ValueFor(row)</td>
-                                  }
-                            </tr>
-
-                        if (row.Model.h_alarm_id != 0) //why do we sometimes have 0 in the tabels? ask GM
-                        {
-                                <tr>
-                                    <td colspan="@Model.Columns.Count()">
-                                        @*Partial stuff here*@
-                                        <div class="modal-content">
-                                            <div class="modal-body">
-                                                <p>ID:@row.Model.h_alarm_id</p>
-                                                <p>Phase1:@row.Model.phase1</p>
-                                                <p>Logtext: @row.Model.ControllerEventLog.Logtext</p>
-                                                <p>FullLogtext: @row.Model.ControllerEventLog.FullLogtext</p>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                        }
-                        else
-                        {
-                                <tr>
-                                    <td colspan="@Model.Columns.Count()">
-                                        <div>no halarm</div>
-                                    </td>
-                                </tr>
-
-                        }
-                    }
-
-        @*end of custom part*@
-                }
-                else if (Model.EmptyText != null)
+            @if (Model.Rows.Any())
+            {
+                @*custom row builder with partial*@
+                foreach (IGridRow<EqUiWebUi.Areas.VASC.Models.rt_job_breakdown> row in Model.Rows)
                 {
-                        <tr class="mvc-grid-empty-row">
-                            <td class="mvc-grid-empty" colspan="@Model.Columns.Count()">
-                                @Model.EmptyText
+                    <tr class="@row.CssClasses">
+                        @foreach (IGridColumn column in Model.Columns)
+                        {
+                            <td class="@column.CssClasses">@column.ValueFor(row)</td>
+                        }
+                    </tr>
+
+                    if (row.Model.h_alarm_id.HasValue)
+                    {
+                        <tr>
+                            <td colspan="@Model.Columns.Count()">
+                                @*Partial stuff here*@
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <p>h_alarm_id:@row.Model.h_alarm_id</p>
+                                        <p>Phase1:@row.Model.phase1</p>
+                                        <p>Title: @row.Model.h_alarm.L_error.Title</p>
+                                        <p>Description: @row.Model.h_alarm.L_error.L_description.Description</p>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
+                    }
+                    else if (row.Model.rt_alarm_id.HasValue)
+                    {
+                        <tr>
+                            <td colspan="@Model.Columns.Count()">
+                                @*Partial stuff here*@
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <p>rt_alarm_id:@row.Model.rt_alarm_id</p>
+                                        <p>Phase1:@row.Model.phase1</p>
+                                        <p>Title: @row.Model.rt_alarm.title</p>
+                                        <p>Description: @row.Model.rt_alarm.description</p>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="@Model.Columns.Count()">
+                                <div>no linked alarm</div>
+                            </td>
+                        </tr>
+
+                    }
                 }
+
+                @*end of custom part*@
+            }
+            else if (Model.EmptyText != null)
+            {
+                <tr class="mvc-grid-empty-row">
+                    <td class="mvc-grid-empty" colspan="@Model.Columns.Count()">
+                        @Model.EmptyText
+                    </td>
+                </tr>
+            }
         </tbody>
         @if (Model.FooterPartialViewName != null)
         {
@@ -107,4 +123,4 @@
     {
         @Html.Partial(Model.Pager.PartialViewName, Model.Pager)
     }
-    </div>
+</div>
