--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -154,5 +154,10 @@
             <a href="~/VASC/Breakdown/getBreakdowns" class="btn btn-primary btn-sm">NGAC breakdown&raquo;</a>(test)
             Test met niet gebufferde query
         </p>
+
+        <p>
+            <a href="~/PJV/pjv/index" class="btn btn-primary btn-sm">PJV&raquo;</a>(test)
+            Test met pjv UI
+        </p>
     </div>
 </div>
