--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -3,20 +3,20 @@
 
 <div class="panel panel-primary">
     <div class="panel-heading">
-                <h4 class="panel-title">
-                    Workorders
-                    <a class="glyphicon glyphicon-cog" href="#" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
-                    <a class="glyphicon glyphicon-new-window" id="goToWorkordersHyperlink" href="#"></a>
-                </h4>
-                <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        <h4 class="panel-title">
+            Workorders
+            <a class="glyphicon glyphicon-cog" href="#" data-toggle="popover" data-placement="bottom" id="workorderOnLocationPopover"></a>
+            <a class="glyphicon glyphicon-new-window" id="goToWorkordersHyperlink" href="#"></a>
+        </h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="panel-body">
         <div id="workorderOnLocationGridSpincontainer" style="position:relative">
             <div id="workorderOnLocationGrid" class="mvc-grid"></div>
         </div>
-        <div id="woDetailsPartial">Click on a row for more details about a workorder</div>
     </div>
 </div>
+
 
 @*popover content*@
 <div class="hidden" id="workorderOnLocationPopoverContent">
@@ -82,9 +82,23 @@
             },
             reload: true, // Grid reload indicator
             rowClicked: function (row, data, e) {
-                $("#woDetailsPartial").html("Loading.....");
+                //if row already has this clase close the modal
+                if ($(row).hasClass("info")) {
+                    $("#placeholder").remove();
+                    $(row).removeClass("info");
+                    return;
+                }
+                //clear selected rows for this table
+                $('tr').removeClass('info'); //THIS IS WRONG
+                $(row).addClass("info");
+                $("#placeholder").remove(); //clear placeholder is exists
+                //add new placeholder afhter selected row
+                $(row).after('<tr id="placeholder"><td colspan="10000"><div class="modal-content"><div class="modal-body" id ="placeholderPartial"></div></div></td></tr>');
+                //animation
+                $("#placeholderPartial").html("Loading.....");
+                //load url in placeholder
                 var url = "@Url.Action("_woDetails", "WorkorderDetails")?RealtimeConn=@Model.realtimeConn&wonum=" + data.WONUM;
-                $("#woDetailsPartial").load(url);
+                $("#placeholderPartial").load(url);
             },
             reloadStarted: function () {
                 workorderOnLocationGridspinner.spin(document.getElementById('workorderOnLocationGridSpincontainer'));
