+test with dynamic optgroups

--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTIndex.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTIndex.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="panel-body">
         <p><a href="~/Alert/Alert/AASPOTAlertList" class="btn btn-primary btn-sm">AASPOTalerts &raquo;</a>AASPOT alerts</p>
-        <p><a href="~/Alert/Alert/AASPOTAlertList?ActiveAlertOnly=true" class="btn btn-warning btn-sm">AASPOTalerts Openalerts &raquo;</a>AASPOT Alerts OPEN state</p>
+        <p><a href="~/Alert/Alert/AASPOTAlertList?ActiveAlertOnly=true&h_alert-triggerCount-GreaterThan=1&h_alert-Rows=15" class="btn btn-warning btn-sm">AASPOTalerts Openalerts&raquo;</a>AASPOT Alerts OPEN state  EN meer dan 1 keer getriggerd </p>
         <hr />
         <p><a href="~/Alert/GunCylinderefernces/Index" class="btn btn-primary btn-sm">GunCylinderefernces (control limits) &raquo;</a></p>
         <p><a href="~/Alert/GunCylinderefernces/Index?maxdelta=1000" class="btn btn-warning btn-sm">GunCylinderefernces &raquo;</a>Detla > 1000ms (control limits that might be wrong)</p>
