--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -16,6 +16,10 @@
 
 <p></p>
 
+@Html.Action("_settings", "AreaFilters", new { area = "user_management" })
+
+<p></p>
+
 @Html.Action("_settings", "UserScreens", new { area = "user_management" })
 
 <p></p>
