--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -45,6 +45,11 @@
                             <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats">WeldgunData</a></li>
                             <li class="divider"></li>
                             <li><a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=sleepBlock">Block autologoff</a></li>
+                            <li class="divider"></li>
+                            <li><a href="https://sway.com/csCS9cdjEpcpPhw0?ref=Link">VSTO Excel Manual</a></li>
+                            <li><a href="https://sharepoint.volvocars.net/sites/vcg_ga_aaosr/SitePages/EQDB.aspx">VSTO Excel plugin</a></li>
+                            <li class="divider"></li>
+                            <li><a href="https://sway.com/5uelU8Pra3GK1N9i">Tableau Manual</a></li>
                         </ul>
                     </li>
 
