--- a/EqUiWebUi/Views/Tableau/EmbeddedDesktop.cshtml
+++ b/EqUiWebUi/Views/Tableau/EmbeddedDesktop.cshtml
@@ -27,10 +27,12 @@
                     $('.viz iframe').attr("scrolling", "no");
                     $('.viz iframe').css('overflow', 'hidden');
                 }
-                //set user filters
-                , 'Asset_png': '@ViewBag.AssetPNG'
+                //set user filters parameter must not exist 
+               // , 'Asset_png': '@ViewBag.AssetPNG'
                 , 'Week': '@ViewBag.Weeknum'
-                , 'Dag' : '@ViewBag.Weekday'
+                , 'Dag': '@ViewBag.Weekday'
+                , 'Vweek': '@ViewBag.Weeknum'
+                , 'Vday' : '@ViewBag.Weekday'
             };
 
             new tableauSoftware.Viz(document.getElementById('viz'), url, vizOptions)
