--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -67,7 +67,7 @@
         </div>
         <div class="panel-body">
             <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetLayoutDashboard" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetMap" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
                 Layout assets (om te zien of alles gemapt is)
             </p>
         </div>
