--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -59,7 +59,7 @@
         </select>
 }
 
-@*drop down control for filtering on 'locationtree' Greenfield only*@
+@*drop down control for filtering on 'locationtree' Greenfield only USED in PLAN TIPCHANGE! *@
 @helper LocationDropdownGreenfield(string id)
     {
         /**/
@@ -195,53 +195,6 @@ Text = "HOP",
         //build dropdonwlist
         @Html.DropDownList("Locations", FilteredLocations);
 }
-
-@*helper to change alter status USED IN SPC TO BE KILLED OFF !!!!!*@
-@helper SetAlertStatus(string id, int alertId, int? currentState)
-    {
-        /**/
-        <div class="dropdown" id="@id">
-            <button class="btn btn-xs btn-danger dropdown-toggle" type="button" data-toggle="dropdown">
-                @{
-                    switch (currentState)
-                    {
-                        case 0:
-                            <text>
-                                DRAFT
-                            </text>
-                            break;
-                        case 1:
-                            <text>
-                                OKREQ
-                            </text>
-                            break;
-                        case 2:
-                            <text>
-                                COMP
-                            </text>
-                            break;
-                        case 3:
-                            <text>
-                                VOID
-                            </text>
-                            break;
-                        default:
-                            <text>
-                                not valid
-                            </text>
-                            break;
-                    }
-                }
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li><a class="modal-link" href="/spc/_setState?id=@alertId&newstate=1">OKREQ</a></li>
-                <li><a class="modal-link" href="/spc/_setState?id=@alertId&newstate=2">COMP</a></li>
-                <li><a class="modal-link" href="/spc/_setState?id=@alertId&newstate=3">VOID</a></li>
-            </ul>
-        </div>
-}
-
 
 
 @*helper to change alter status users in ALERT ALERT*@
