--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -14,6 +14,7 @@
     columns.Add(c => c.C_timestamp).Titled("C_timestamp").Formatted("{0:dd-MM-yyyy HH:mm}").Css("hidden-sm hidden-xs");
     columns.Add(c => c.location).Titled("location");
     columns.Add(c => c.alarmobject).Titled("alarmobject").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Classification).Titled("Class").Css("hidden-sm hidden-xs");
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.ChangedUser.username.Replace(@"VCCNET\", "")).Titled("ChangedUser").Css("hidden-sm hidden-xs");
     columns.Add(c => c.triggerCount).Titled("TC").Css("hidden-sm hidden-xs");
