Made locationtree system more dynamic

--- a/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
@@ -73,7 +73,7 @@
         </dt>
 
         <dd>
-            @MyFilters.LocationDropdownGlobal("LocationRoot")
+            @Html.DropDownList("LocationRoot", (SelectList)ViewBag.selectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select a location--")
         </dd>
 
         <p></p>
