--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/PlanTipChange.cshtml
@@ -22,7 +22,7 @@
                         <div class="col-sm-5">
                             <label class="control-label col-sm-4" for="location">Op locatie</label>
                             <div class="col-sm-8">
-                                @MyFilters.LocationDropdownGreenfield("location")
+                                @Html.DropDownList("location", (SelectList)ViewBag.selectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select a location--")
                             </div>
                         </div>
                     </div>
