--- a/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/AreaFilters/Index.cshtml
@@ -6,16 +6,6 @@
 }
 
 <h2>Index</h2>
-
-
-<div>
-    <h6>test</h6>
-    @Html.DropDownList("testdropdownlist",(SelectList)ViewBag.selectlist)
-
-</div>
-
-
-
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -48,38 +38,57 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Plant)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Optgroup)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Area)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LocationTreeFilter1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LocationTreeFilter2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LocationTreeFilter3)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LocationTreeFilter4)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserComment)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Plant)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Optgroup)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Area)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LocationTreeFilter1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LocationTreeFilter2)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LocationTreeFilter3)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LocationTreeFilter4)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserComment)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.id })
+            </td>
+        </tr>
+    }
+</table>
+
+
+<hr />
+<div class="alert alert-info">
+    <div>
+        <h5>LocationDropdownList</h5>
+        @Html.DropDownList("testdropdownlist", (SelectList)ViewBag.selectlist, htmlAttributes: new { @class = "form-control" }, optionLabel:"--Select a location--")
+    </div>
+</div>
+
+
+@section scripts{
+    <script>
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+    </script>
 }
 
-</table>
