--- a/EqUiWebUi/Areas/user_management/Views/user/Edit.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/user/Edit.cshtml
@@ -29,7 +29,7 @@
             @Html.LabelFor(model => model.LocationRoot, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <p>
-                    @MyFilters.LocationDropdownGlobal("LocationRootPreselect")
+                    @Html.DropDownList("LocationRootPreselect", (SelectList)ViewBag.selectlist, htmlAttributes: new { @class = "form-control" }, optionLabel: "--Select a location--")
                 </p>
                 @Html.EditorFor(model => model.LocationRoot, Model.Locked ? (object)new { htmlAttributes = new { @readonly = "readonly", @class = "form-control" } } : new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LocationRoot, "", new { @class = "text-danger" })
