--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -24,6 +24,10 @@
                 Weergave van waar er elektrodes niet op tijd gewisseld zijn. (robot zelf naar onderhoud gegaan)
             </p>
             <p>
+                <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alertType-Contains=Tiplife&h_alert-Rows=7" class="btn btn-warning btn-sm">Alerts&raquo;</a>
+                Tiplife alerts (no changed deteced)
+            </p>
+            <p>
                 <a href="~/Tiplife/NgacElectrode/TipDressData" class="btn btn-primary btn-sm">TipDressData &raquo;</a>
                 Ruwe Tipdress data
             </p>
