--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IQueryable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
+@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
 
 @Html.Grid(Model).Named("TipsChangedTable").Build(columns =>
 {
